--- a/style.css
+++ b/style.css
@@ -618,7 +618,7 @@ footer div.footer-container div.item a i  {
     margin-left: 60px;
 }
 footer div.footer-container div.item ul {
-    display: ;
+    
 
 }
 footer div.footer-container div.item ul li {
@@ -631,6 +631,49 @@ footer p {
     color: #fff;
     padding: 0px 75px;
     margin-top: 120px;
+}
+
+/* footer end''' */
+
+/* section speaker''' */
+
+section#speaker {
+    width: 100%;
+    background: rgb(241, 241, 241);
+
+}
+section#speaker div.container {
+    display: flex;
+    padding: 48px 0px;
+  
+}
+section#speaker div.container div.item {
+    background: #fff;
+    margin-left: 20px;
+
+}
+section#speaker div.container div.item div.top {
+    width: 215px;
+    height: 123px;
+    
+
+}
+section#speaker div.container div.item div.top img {
+    width: 100%;
+    height: 100%
+}
+section#speaker div.container div.item div.bottom {
+    width: 215px;
+    height: 70px;
+    padding: 0px 17px;
+    display: flex;
+    align-items: center;
+
+    
+}
+section#speaker div.container div.item div.bottom p {
+    font-size: 14px;
+
 }
 
 
