speaker_html_structure_completed

--- a/style.css
+++ b/style.css
@@ -613,6 +613,8 @@ footer div.footer-container div.item a {
 footer div.footer-container div.item a h5 {
     color: white;
     font-size: 16px;
+    margin-bottom: 20px;
+
 }
 footer div.footer-container div.item a i  {
     margin-left: 60px;
@@ -622,9 +624,10 @@ footer div.footer-container div.item ul {
 
 }
 footer div.footer-container div.item ul li {
-
+    margin-bottom: 20px;
 }
 footer div.footer-container div.item ul li a {
+    color: #fff;
     
 }
 footer p {
@@ -713,11 +716,15 @@ section#products div.container div.top div.second p a {
     color: black;
 }
 section#products div.container div.bottom {
+    margin-top: 75px;
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
 }
 section#products div.container div.bottom div.item {
     width: 30%;
+    margin-right: 45px;
+    padding-bottom: 45px;
 }
 section#products div.container div.bottom div.item div.up {
     width: 460px;
@@ -727,10 +734,70 @@ section#products div.container div.bottom div.item div.up img {
     width: 100%;
     display: inline-block;
 }
-section#products div.container div.bottom div.item div.down {}
-section#products div.container div.bottom div.item div.down span.one {}
-section#products div.container div.bottom div.item div.down p {}
-section#products div.container div.bottom div.item div.down span.two {}
+section#products div.container div.bottom div.item div.down {
+    width: 100%;
+    margin-top: 20px;
+}
+section#products div.container div.bottom div.item div.down span.one {
+    font-size: 18px;
+}
+section#products div.container div.bottom div.item div.down p {
+    font-size: 14px;
+}
+section#products div.container div.bottom div.item div.down span.two {
+    font-size: 14px;
+}
+/* section products end''''' */
+
+section#sign_up {}
+section#sign_up div.container {
+    background-color: rgb(252, 250, 238);
+    padding: 60px 0px;
+
+}
+section#sign_up div.container div.top {
+    display: block;
+margin: 0 auto;
+    width: 3%;
+
+}
+section#sign_up div.container div.top img {
+    display: block;
+    margin-bottom: 20px;
+   
+
+}
+section#sign_up div.container div.bottom {
+    text-align: center;
+    
+}
+section#sign_up div.container div.bottom h5 {
+    margin-bottom: 20px;
+    font-size: 18px;
+}
+section#sign_up div.container div.bottom p {
+    font-size: 14px;
+    margin-bottom: 40px;
+}
+section#sign_up div.container div.bottom a.button {
+    display: block;
+    border-radius: 24px;
+    background-color: rgb(252, 250, 238);
+    color: #000;
+    padding: 10px 28px;
+    font-size: 14px;
+    font-weight: 600;
+    display: inline;
+    border: 2px solid black;
+    margin-top: 20px;
+}
+section#sign_up div.container div.bottom a.button:hover {
+    background-color: rgb(255, 195, 86);
+    border: none;
+
+
+}
+
 
 
 
